fix(pageHeaderComponent): L3-6694 small misalignment in account page header component (#616)

--- a/src/patterns/AccountPageHeader/_accountPageHeader.scss
+++ b/src/patterns/AccountPageHeader/_accountPageHeader.scss
@@ -8,7 +8,12 @@
     width: 100%;
   }
 
-  &__header {
+  &__title {
+    // To help center the title, accounts for the extra space inside the span below the text
+    margin-top: $spacing-micro;
+  }
+
+  &__title-wrapper {
     align-items: center;
     display: flex;
     gap: $spacing-md;
